# allen-asset-creation-library

./: README.md  pyproject.toml
.github/workflows/: tag_and_publish.yml
src/allen_automation_capsule_library/: job.py
tests/: test_job.py
tests/resources/: example_capture_result_response.json  example_data_description.json
